# Webull-SDK-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  src.txt
docs/: documentation.md
examples/res/: dummy.json
examples/src/core/: application.cpp  application.hpp
include/client/: market.hpp  trading.hpp
src/: main.cpp
src/client/: trading.cpp
src/core/: application.cpp  application.hpp  credentials.cpp  curl.cpp  curl.hpp  curl_pool.cpp  market.cpp  token.cpp  token.hpp  trading.cpp
src/secret/: secret.cpp  secret.hpp
src/utilities/: cryptography.cpp  cryptography.hpp  http.cpp  http.hpp  json.cpp  json.hpp  openapi.cpp  openapi.hpp  time.cpp  time.hpp  utilities.cpp  utilities.hpp
